@@ -1,25 +1,30 @@
 package fr.upem.jarset;
 
-import static org.junit.Assert.*;
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertTrue;
+import static org.junit.Assert.fail;
 
 import java.io.IOException;
 import java.net.InetSocketAddress;
 import java.net.URL;
+import java.nio.file.Paths;
 import java.util.Optional;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.Future;
+import java.util.concurrent.TimeUnit;
+import java.util.concurrent.TimeoutException;
 
 import org.junit.After;
 import org.junit.Before;
 import org.junit.Test;
 
 import fr.upem.worker.Task;
-import fr.upem.worker.WorkerInfo;
 
 public class ClientTest {
 
+	private static final int port = 7778;
 	ExecutorService executor;
 
 	@Before
@@ -33,8 +38,8 @@ public class ClientTest {
 	}
 	@Test
 	public void testCreate() throws IOException {
-		Server server = Server.create(7778);
-		Client client = Client.create(new InetSocketAddress(7778), "Ode");
+		Server server = Server.create(port);
+		Client client = Client.create(new InetSocketAddress(port), "Ode");
 		client.close();
 		server.close();
 
@@ -42,18 +47,18 @@ public class ClientTest {
 
 	@Test
 	public void testRequestTask() throws IOException, InterruptedException, ExecutionException {
-		Server server = Server.create(7778);
-		Client client = Client.create(new InetSocketAddress(7778), "Ode");
+		Server server = Server.create(port);
+		Client client = Client.create(new InetSocketAddress(port), "Ode");
 
 		try{
-			WorkerInfo info = new WorkerInfo("1.0", new URL("http://igm.univ-mlv.fr/~carayol/WorkerPrimeV1.jar"), "upem.workerprime.WorkerPrime");
-			Task task = new Task(23571113, info, 100);
-			String json = "{\"JobId\":\""+task.getJobId()+"\",\"WorkerVersion\":\""+info.getVersion()+"\",\"WorkerURL\":\""+info.getUrl()+"\",\"WorkerClassName\":\""+info.getClassName()+"\",\"Task\":\""+task.getTask()+"\"}";
+			URL url = Paths.get("jarTest","WorkerTest.jar").toUri().toURL();
+			Task task = new Task(1, 100, "1.0", url, "upem.jarret.worker.Normal");
+			String json = "{\"JobId\":\""+task.getJobId()+"\",\"WorkerVersion\":\""+task.getVersion()+"\",\"WorkerURL\":\""+task.getWorkerUrl()+"\",\"WorkerClassName\":\""+task.getWorkerClassName()+"\",\"Task\":\""+task.getTask()+"\"}";
 			Future<String> submit = executor.submit(() -> {
 				try {
 					return server.get(json);
 				} catch (IOException e) {
-					return null;
+					return "IO error";
 				}});
 			Future<Optional<Task>> future = executor.submit(() -> client.requestTask());
 			assertEquals(null, submit.get());
@@ -71,8 +76,117 @@ public class ClientTest {
 	}
 
 	@Test
-	public void testManageTask() {
-		fail("Not yet implemented");
+	public void testManageTaskCumputation() throws IOException, InterruptedException, ExecutionException {
+		Server server = Server.create(port);
+		Client client = Client.create(new InetSocketAddress(port), "Ode");
+		URL url = Paths.get("jarTest","WorkerTest.jar").toUri().toURL();
+		String className = "upem.jarret.worker.ComputationError";
+		Task task = new Task(1, 100, "1.0", url, className);
+		try{
+			String error = "Computation error";
+			Future<String> future = executor.submit(() ->server.manageTask(error));
+			Future<Boolean> future2 = executor.submit(() -> client.manageTask(task));
+			String actual;
+			try {
+				actual = future.get(1,TimeUnit.SECONDS);
+				assertEquals(null, actual);
+				assertTrue(future2.get());
+			} catch (TimeoutException e) {
+				fail("time out exception");
+			}
+			
+
+		}
+		finally {	
+			client.close();
+			server.close();
+		}
+		
+	}
+	
+	@Test
+	public void testManageTaskInvalidJson() throws IOException, InterruptedException, ExecutionException {
+		Server server = Server.create(port);
+		Client client = Client.create(new InetSocketAddress(port), "Ode");
+		URL url = Paths.get("jarTest","WorkerTest.jar").toUri().toURL();
+		String className = "upem.jarret.worker.InvalidJson";
+		Task task = new Task(1, 100, "1.0", url, className);
+		try{
+			String error = "Answer is not valid JSON";
+			Future<String> future = executor.submit(() ->server.manageTask(error));
+			Future<Boolean> future2 = executor.submit(() -> client.manageTask(task));
+			String actual;
+			try {
+				actual = future.get(1,TimeUnit.SECONDS);
+				assertEquals(null, actual);
+				assertTrue(future2.get());
+			} catch (TimeoutException e) {
+				fail("time out exception");
+			}
+			
+
+		}
+		finally {	
+			client.close();
+			server.close();
+		}
+		
+	}
+	@Test
+	public void testManageTaskNested() throws IOException, InterruptedException, ExecutionException {
+		Server server = Server.create(port);
+		Client client = Client.create(new InetSocketAddress(port), "Ode");
+		URL url = Paths.get("jarTest","WorkerTest.jar").toUri().toURL();
+		String className = "upem.jarret.worker.Nested";
+		Task task = new Task(1, 100, "1.0", url, className);
+		try{
+			String error = "Answer is nested";
+			Future<String> future = executor.submit(() ->server.manageTask(error));
+			Future<Boolean> future2 = executor.submit(() -> client.manageTask(task));
+			String actual;
+			try {
+				actual = future.get(1,TimeUnit.SECONDS);
+				assertEquals(null, actual);
+				assertTrue(future2.get());
+			} catch (TimeoutException e) {
+				fail("time out exception");
+			}
+			
+
+		}
+		finally {	
+			client.close();
+			server.close();
+		}
+		
+	}
+	@Test
+	public void testManageTaskTooLong() throws IOException, InterruptedException, ExecutionException {
+		Server server = Server.create(port);
+		Client client = Client.create(new InetSocketAddress(port), "Ode");
+		URL url = Paths.get("jarTest","WorkerTest.jar").toUri().toURL();
+		String className = "upem.jarret.worker.TooLong";
+		Task task = new Task(1, 100, "1.0", url, className);
+		try{
+			String error = "Too Long";
+			Future<String> future = executor.submit(() ->server.manageTask(error));
+			Future<Boolean> future2 = executor.submit(() -> client.manageTask(task));
+			String actual;
+			try {
+				actual = future.get(5,TimeUnit.SECONDS);
+				assertEquals(null, actual);
+				assertTrue(future2.get());
+			} catch (TimeoutException e) {
+				fail("time out exception");
+			}
+			
+
+		}
+		finally {	
+			client.close();
+			server.close();
+		}
+		
 	}
 
 
